--- a/HomeDecoration/src/main/webapp/WEB-INF/web.xml
+++ b/HomeDecoration/src/main/webapp/WEB-INF/web.xml
@@ -20,8 +20,12 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-
-  <!-- 配置DispatcherServlet前端控制器，拦截所有*.action请求 -->
+    <!--配置监听器，进行检查型错误，如果有就提示错误-->
+   <!-- <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>-->
+  <!-- 配置DispatcherServlet前端控制器，拦截所有*.action请求
+       并且这里配置了容器加载时的要加载所有配置文件-->
   <servlet>
     <servlet-name>SpringMVC</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
